<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.query.AddQueryFragment">

    <data>

        <variable
            name="viewModel"
            type="com.childhealthcare.parent.ui.query.AddQueryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/partial_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:titleStr="@{`New Query`}" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/form_top_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/label_description"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_area_height"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/poppins"
                    android:gravity="top"
                    android:hint="@string/hint_task_description"
                    android:padding="@dimen/horizontal_margin"
                    android:text="@={viewModel.description}"
                    android:textSize="13sp"
                    app:layout_constraintTop_toBottomOf="@id/label_description" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.Button"
                    android:text="@string/label_submit"
                    android:onClick="@{() -> viewModel.addQuery()}"
                    android:layout_marginTop="@dimen/form_top_margin"
                    app:layout_constraintEnd_toEndOf="@id/description"
                    app:layout_constraintStart_toStartOf="@id/description"
                    app:layout_constraintTop_toBottomOf="@id/progressbar" />


                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.progressbarVisibility}"
                    android:layout_marginTop="@dimen/vertical_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>