<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.account.LoginFragment">

    <data>
        <variable
            name="viewModel"
            type="com.childhealthcare.parent.ui.account.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/bg_home_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/edt_email_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_email_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_50"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:drawableLeft="@drawable/ic_alternate_email"
            android:drawablePadding="@dimen/padding_5"
            android:hint="@string/hint_user_name"
            android:inputType="number"
            style="@style/AppTheme.Field"
            android:text="@={viewModel.userName}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998"
            tools:ignore="RtlHardcoded"
            app:validateEmpty="@{true}"/>

        <EditText
            android:id="@+id/edt_password_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_50"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/padding_5"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            style="@style/AppTheme.Field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_login"
            app:validateEmpty="@{true}"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login"
            style="@style/AppTheme.Button"
            android:onClick="@{()-> viewModel.login()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_login"
            app:layout_constraintVertical_bias="0.32" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up for new Account?"
            style="@style/AppTheme.Heading4"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.progressbarVisibility}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>